Support more control on github options

--- a/templates/env.j2
+++ b/templates/env.j2
@@ -4,4 +4,13 @@ SECRET_TOKEN={{ samson_secret_token}}
 GITHUB_CLIENT_ID={{ samson_github_client_id }}
 GITHUB_SECRET={{ samson_github_secret }}
 GITHUB_TOKEN={{ samson_github_token }}
-AUTH_LDAP={{ samsoin_auth_ldap }}
+AUTH_LDAP={{ samson_auth_ldap }}
+{% if samson_github_organization is defined %}
+GITHUB_ORGANIZATION={{ samson_github_organization }}
+{% endif %}
+{% if samson_github_admin_team is defined %}
+GITHUB_ADMIN_TEAM={{ samson_github_admin_team }}
+{% endif %}
+{% if samson_github_deploy_team is defined %}
+GITHUB_DEPLOY_TEAM={{ samson_github_deploy_team }}
+{% endif %}
